# PredictiveCoding

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CURRENT_STATE.md  LLM_BRIEF.md  PLANS.md  PROMPT_CONTEXT.md  README.md  RESULTS.md  pyproject.toml  spec_math.md  tf2_reconciliation.json  validation.md
archive/: PLANS_HISTORY.md
experiments/: compare_pc_vs_mlp.py  digits_mlp.py  digits_pc.py  digits_pc_inference_baselines.py  fashion_mnist_pc.py  fmpc_ef_exploratory_probe.py  fmpc_interval_suite.py  fmpc_meanflow_suite.py  fmpc_tf1.py  fmpc_tf1_accuracy_tuning_suite.py  fmpc_tf1_default_adoption_suite.py  fmpc_tf1_external_comparison_suite.py  fmpc_tf1_gate_coverage_suite.py  fmpc_tf1_multiseed_suite.py  fmpc_tf1_selection_suite.py  fmpc_tf1_selector_policy_suite.py  fmpc_tf1_suite.py  fmpc_tf2.py  fmpc_tf2_attribution_suite.py  fmpc_tf2_basis_drift_localization_suite.py  fmpc_tf2_batch_frozen_target_state_suite.py  fmpc_tf2_bootstrap_fidelity_suite.py  fmpc_tf2_bootstrap_source_bias_suite.py  fmpc_tf2_curriculum_suite.py  fmpc_tf2_default_adoption_suite.py  fmpc_tf2_downstream_coupling_suite.py  fmpc_tf2_endpoint_basis_suite.py  fmpc_tf2_external_comparison_suite.py  fmpc_tf2_gap_decomposition_suite.py  fmpc_tf2_identity_semantics_suite.py  fmpc_tf2_late_rollout_drift_control_suite.py  fmpc_tf2_mainline_adoption_suite.py  fmpc_tf2_microstep_horizon_suite.py  fmpc_tf2_mirrored_handoff_asymmetry_suite.py  fmpc_tf2_open_vs_closed_loop_suite.py  fmpc_tf2_output_sensitive_terminal_direction_suite.py  fmpc_tf2_partial_open_loop_handoff_suite.py  (+45 more)
notes/: jpc_intake.md
(+4100 files in other folders)
